test/expected/explain_fas3_v-c++.out
explain void f(int x[static 3])
                    ^
21: error: "static" arrays not supported in C++
